--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "owl.carousel": "^2.3.4",
     "phantomjs-prebuilt": "^2.1.16",
     "svg4everybody": "^2.1.9"
   },
