--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
-    "gulp-imagemin": "^6.1.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-json-srv": "^1.2.0",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-plumber": "^1.2.1",
@@ -33,7 +33,8 @@
     "gulp-svgmin": "^2.2.0",
     "gulp-uglify": "^3.0.2",
     "imagemin-jpeg-recompress": "^6.0.0",
-    "smart-grid": "^2.1.2"
+    "smart-grid": "^2.1.2",
+    "vinyl-buffer": "^1.0.1"
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
