--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-svgmin": "^2.2.0",
     "gulp-uglify": "^3.0.2",
     "imagemin-jpeg-recompress": "^6.0.0",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
     "smart-grid": "^2.1.2",
     "vinyl-buffer": "^1.0.1"
   },
