--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
+    "gulp-cache-bust": "^1.4.1",
     "gulp-cached": "^1.1.1",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
