--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Sergey Margelov",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "4.0",
@@ -28,14 +28,16 @@
     "gulp-pugbem": "^2.2.4",
     "gulp-rename": "1.4.0",
     "gulp-replace": "1.0.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^2.2.0",
     "gulp-uglify": "^3.0.2",
     "imagemin-jpeg-recompress": "^6.0.0",
+    "jquery.maskedinput": "^1.4.1",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "smart-grid": "^2.1.2",
+    "sweetalert2": "^9.14.0",
     "vinyl-buffer": "^1.0.1"
   },
   "dependencies": {
