--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Используется связка `Gulp` + `Pug` + `sass` + `BrowserSync`",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:min": "gulp build-min"
   },
   "repository": {
     "type": "git",
