--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:min": "gulp build-min"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
